samples/errors/module.pad
{@
    def func():
        1 = 1
    end
@}